--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,25 +1,38 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
-  "icons": [
+  "short_name": "ReactPass",
+  "name": "ReactPass® Password Manager",
+  "version": "1.0.0",
+  "manifest_version": 2,
+  "icons": {
+    "16": "logo512_blue.png",
+    "48": "logo512_blue.png",
+    "128": "logo512_blue.png"
+  },
+  "browser_action": {
+    "default_popup": "index.html",
+    "default_title": "ReactPass Password Manager"
+  },
+  "permissions": [
+    "storage",
+    "tabs",
+    "privacy",
+    "contextMenus"
+  ],
+  "content_scripts": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
-    },
-    {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "all_frames": true,
+      "js": [
+        "./static/js/content.js"
+      ],
+      "matches": [
+        "http://*/*",
+        "https://*/*"
+      ],
+      "run_at": "document_end"
     }
   ],
-  "start_url": ".",
-  "display": "standalone",
-  "theme_color": "#000000",
-  "background_color": "#ffffff"
+  "web_accessible_resources": [
+    "assets/manifestIcons/icon.svg",
+    "index.html"
+  ]
 }
